feature: buscar cliente por id user
